--- a/Content/Web/package.json
+++ b/Content/Web/package.json
@@ -12,8 +12,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@dolittle/build": "6.2.3",
-    "@dolittle/build.react": "^1.0.5",
+    "@dolittle/build": "^6.2.3",
+    "@dolittle/build.react": "^1.0.6",
     "@dolittle/styles": "^2.9.5",
     "webpack": "^4.26.0",
     "webpack-cli": "^3.1.2",
