--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@dolittle/boilerplates.interaction.web.js.react",
-  "version": "1.0.1",
+  "version": "1.1.2",
   "description": "Standard react interaction layer boilerplate",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/dolittle-boilerplates/CSharp.BoundedContext.Interaction.React.git"
   },
-  "keywords": ["dolittle", "boilerplates", "interaction-layer"],
+  "keywords": ["dolittle", "tooling", "boilerplates", "interaction-layer"],
   "dolittle": {
-    "tooling": "5"
+    "tooling": "6.*"
   },
   "author": "Dolittle",
   "license": "MIT",
